[gd_scene load_steps=9 format=3 uid="uid://do2hqairs6s3l"]

[ext_resource type="Script" uid="uid://co53lgyknsfhf" path="res://Microjuegos/Cuello/17_Gato buscando sol/Script/gato_buscando_sol.gd" id="1_3cvin"]
[ext_resource type="Texture2D" uid="uid://dcgjh85fm1hlg" path="res://Fondos/FondoCalle.png" id="2_ooehp"]
[ext_resource type="Texture2D" uid="uid://banxj0w0uoodn" path="res://Microjuegos/Cuello/17_Gato buscando sol/Sprites/luz.png" id="3_1jhdy"]
[ext_resource type="Texture2D" uid="uid://dtvdf01lw16jy" path="res://Microjuegos/Cuello/17_Gato buscando sol/Sprites/gatoquiertosol.png" id="4_18st8"]
[ext_resource type="Texture2D" uid="uid://b248up0s8mrbe" path="res://Microjuegos/Cuello/17_Gato buscando sol/Sprites/gatomoviendosol.png" id="5_k7wbr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ly7up"]
size = Vector2(223, 158)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bfu46"]
size = Vector2(236, 260)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hvk7l"]
bg_color = Color(0.164706, 0.164706, 0.164706, 0.486275)

[node name="GatoBuscandoSol" type="Node2D"]
script = ExtResource("1_3cvin")

[node name="AreaSol" type="TextureRect" parent="."]
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -3.0
offset_top = 1.0
offset_right = 1924.0
offset_bottom = 1081.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("2_ooehp")
metadata/_edit_lock_ = true

[node name="TimerApertura" type="Timer" parent="."]

[node name="TimerJuego" type="Timer" parent="."]
wait_time = 5.0

[node name="TimerBarra" type="Timer" parent="."]
one_shot = true

[node name="BarraTiempo" type="ProgressBar" parent="."]
offset_left = 1245.0
offset_top = 22.0
offset_right = 1883.0
offset_bottom = 87.0
max_value = 7.0

[node name="RayoSol" type="Area2D" parent="."]

[node name="SpriteSol" type="Sprite2D" parent="RayoSol"]
position = Vector2(953, 547)
scale = Vector2(0.115625, 0.0828125)
texture = ExtResource("3_1jhdy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="RayoSol"]
position = Vector2(953.5, 548)
shape = SubResource("RectangleShape2D_ly7up")

[node name="TimerMovimientoSol" type="Timer" parent="RayoSol"]
wait_time = 3.0
one_shot = true

[node name="Gato" type="CharacterBody2D" parent="."]

[node name="SpriteGatoQuieto" type="Sprite2D" parent="Gato"]
position = Vector2(1615, 774)
scale = Vector2(0.359375, 0.359375)
texture = ExtResource("4_18st8")

[node name="SpriteGatoCaminando" type="Sprite2D" parent="Gato"]
visible = false
position = Vector2(1613, 778)
scale = Vector2(0.369141, 0.369141)
texture = ExtResource("5_k7wbr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Gato"]
position = Vector2(1593, 772)
shape = SubResource("RectangleShape2D_bfu46")

[node name="TextoInstruccion" type="Label" parent="."]
offset_left = 352.0
offset_top = 440.0
offset_right = 1592.0
offset_bottom = 671.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = SubResource("StyleBoxFlat_hvk7l")
text = "Instruccion"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ContadorToques" type="Label" parent="."]
offset_left = 18.0
offset_top = 61.0
offset_right = 395.0
offset_bottom = 283.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = SubResource("StyleBoxFlat_hvk7l")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="timeout" from="TimerApertura" to="." method="_on_TimerApertura_timeout"]
[connection signal="timeout" from="TimerJuego" to="." method="_on_TimerJuego_timeout"]
[connection signal="timeout" from="TimerBarra" to="." method="_on_TimerBarra_timeout"]
[connection signal="body_entered" from="RayoSol" to="." method="_on_RayoSol_body_entered"]
[connection signal="timeout" from="RayoSol/TimerMovimientoSol" to="." method="_on_TimerMovimientoSol_timeout"]
